[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdp-metric-collector"
description = "Cloudera CDP Metric Collector"
dynamic = ["version"]
readme = "DONTREADME.md"
maintainers = [{ name = "unhealme", email = "o2tongpethuk@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "aiohttp[speedups]",
    "hdfs;sys_platform=='win32'",
    "hdfs[kerberos];sys_platform!='win32'",
    "httpx-gssapi",
    "httpx[http2]",
    "impyla;sys_platform=='win32'",
    "impyla[kerberos];sys_platform!='win32'",
    "msgspec[yaml]",
    "uvloop;sys_platform!='win32'",
]

[dependency-groups]
dev = ["ruff"]

[tool.hatch.version]
path = "cdp_metric_collector/__init__.py"

[project.scripts]
cdp-metric-collector = "cdp_metric_collector:main"
