[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdp-metric-collector"
description = "Cloudera CDP Metric Collector"
dynamic = ["version"]
readme = "README.md"
maintainers = [{ name = "unhealme", email = "o2tongpethuk@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "aiohttp[speedups]",
    "hdfs",
    "httpx[http2]",
    "impyla",
    "msgspec[yaml]",
    "uvloop;sys_platform!='win32'",
]

[project.optional-dependencies]
kerberos = ["hdfs[kerberos]", "httpx-gssapi", "impyla[kerberos]"]

[dependency-groups]
dev = ["ruff"]

[tool.hatch.version]
path = "cdp_metric_collector/__init__.py"

[project.scripts]
cdp-metric-collector = "cdp_metric_collector:main"
